fix homepage-special-rows spacing

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -110,6 +110,9 @@ input, button, textarea {
   flex-direction: column;
   justify-content: space-between;
   margin-top: 2em;
+  ul {
+    position: absolute;
+  }
   @media (max-width: $break_sm) {
     display: block;
     .row {
@@ -117,6 +120,7 @@ input, button, textarea {
     }
     ul {
       padding-bottom: 2em;
+      position: static;
     }
   }
 }
